mabger-meter/force-app/main/default/objects/Case/fields/Account_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Company_Number__c</fullName>
    <formula>TEXT( Account.Company_Number__c )</formula>
    <label>Account Company Number</label>
    <type>Text</type>
</CustomField>