mabger-meter/force-app/main/default/objects/Case/fields/Account_Organization_Type1__c.field-meta.xml
<CustomField>
    <fullName>Account_Organization_Type1__c</fullName>
    <label>Account Organization Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>