mabger-meter/force-app/main/default/objects/Case/fields/Account_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Organization_Type__c</fullName>
    <formula>TEXT( Account.Organization_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Organization Type</label>
    <type>Text</type>
</CustomField>