mabger-meter/force-app/main/default/objects/Case/fields/Account_Relationship_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field links customer shipping addresses (from LX) to the Case, allowing the Account Relationship Ship-To address to identify where we ship a customer&apos;s product back to. If the address the customer identifies is not available it must be entered below.</inlineHelpText>
    <label>Account Relationship (Ship To)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Relationship__c.Partner_1__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Search results only display Account Relationship Ship-To&apos;s associated to the case account.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Relationship__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>