mabger-meter/force-app/main/default/objects/Case/fields/Account_s_Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_s_Billing_Country_Code__c</fullName>
    <label>Account&apos;s Billing Country Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>