mabger-meter/force-app/main/default/objects/Case/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <description>Added to sort Cases list views.</description>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State</label>
    <type>Text</type>
</CustomField>