mabger-meter/force-app/main/default/objects/Case/fields/AccountRelationshipShipTo__c.field-meta.xml
<CustomField>
    <fullName>AccountRelationshipShipTo__c</fullName>
    <description>If an address is populated within the Account Relationship to, this field will hold the address to be merged on the RMA.</description>
    <formula>Account_Relationship_Ship_To__r.Ship_To_Name__c+BR()+
Account_Relationship_Ship_To__r.Partner_2_Shipping_Street__c+BR()+
Account_Relationship_Ship_To__r.Partner_2_Shipping_City__c+&quot;, &quot;+ TEXT(Account_Relationship_Ship_To__r.Partner_2_Shipping_State__c)+BR()+
Account_Relationship_Ship_To__r.Partner_2_Shipping_Postal_Code__c+BR()+
TEXT(Account_Relationship_Ship_To__r.Partner_2_Shipping_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountRelationshipShipTo</label>
    <type>Text</type>
</CustomField>