mabger-meter/force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Ship To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>