mabger-meter/force-app/main/default/objects/Case/fields/Apparent_Cause__c.field-meta.xml
<CustomField>
    <fullName>Apparent_Cause__c</fullName>
    <label>Apparent Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reason 1</fullName>
            </value>
            <value>
                <fullName>Reason 2</fullName>
            </value>
            <value>
                <fullName>Reason 3</fullName>
            </value>
            <value>
                <fullName>Reason 4</fullName>
            </value>
            <value>
                <fullName>Reason 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>