mabger-meter/force-app/main/default/objects/Case/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <label>Approved / Rejected Date</label>
    <type>DateTime</type>
</CustomField>