mabger-meter/force-app/main/default/objects/Case/fields/Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue__c</fullName>
    <label>Assigned Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>