mabger-meter/force-app/main/default/objects/Case/fields/Auto_Response_Email_was_Sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Response_Email_was_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>automatically checked by process builder</description>
    <label>Auto Response Email was Sent</label>
    <type>Checkbox</type>
</CustomField>