mabger-meter/force-app/main/default/objects/Case/fields/BEACON_Device_Health__c.field-meta.xml
<CustomField>
    <fullName>BEACON_Device_Health__c</fullName>
    <label>BEACON Device Health</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>