mabger-meter/force-app/main/default/objects/Case/fields/Billing_Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>