mabger-meter/force-app/main/default/objects/Case/fields/Call_Org_Emails__c.field-meta.xml
<CustomField>
    <fullName>Call_Org_Emails__c</fullName>
    <formula>CASE(Case_Owner_s_Division__c,
&quot;Utility&quot;,&quot;0D23t000000L0w0&quot;,
&quot;Flow&quot;,&quot;0D23t000000L0wo&quot;,
&quot;Utility Tech&quot;,&quot;0D23t000000L0xI&quot;,
&quot;WYCO&quot;,&quot;0D238000000L0ui&quot;, 
&quot;0D23t000000L0wo&quot;)</formula>
    <label>Call Org Emails</label>
    <type>Text</type>
</CustomField>