mabger-meter/force-app/main/default/objects/Case/fields/Call_RMA_Document__c.field-meta.xml
<CustomField>
    <fullName>Call_RMA_Document__c</fullName>
    <formula>IF(Use_Suggested_Return__c = FALSE,

  CASE(Return_Location__c, 
  &quot;Milwaukee&quot;,&quot;a2838000002YZyM&quot;, 
  &quot;Racine&quot;,&quot;a2838000002YZyR&quot;, 
  &quot;Tulsa&quot;,&quot;a2838000002YZyW&quot;,
  &quot;Neuffen&quot;,&quot;a283t000005WYybAAG&quot;,
  &quot;Collegeville&quot;,&quot;a283t000004WLMJ&quot;,
  &quot;BMUK&quot;,&quot;a283t000004WLMO&quot;,
  &quot;a2838000002YZyR&quot;),

  CASE(Suggested_Return_Location__c, 
  &quot;Milwaukee&quot;,&quot;a2838000002YZyM&quot;, 
  &quot;Racine&quot;,&quot;a2838000002YZyR&quot;, 
  &quot;Neuffen&quot;,&quot;a283t000005WYybAAG&quot;,
  &quot;Tulsa&quot;,&quot;a2838000002YZyW&quot;,
  &quot;Collegeville&quot;,&quot;a283t000004WLMJ&quot;,
  &quot;BMUK&quot;,&quot;a283t000004WLMO&quot;,
  &quot;a2838000002YZyR&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call RMA Document</label>
    <type>Text</type>
</CustomField>