mabger-meter/force-app/main/default/objects/Case/fields/Call_RMA_Email__c.field-meta.xml
<CustomField>
    <fullName>Call_RMA_Email__c</fullName>
    <formula>IF(Use_Suggested_Return__c = FALSE,

CASE(Return_Location__c,
&quot;Neuffen&quot;,&quot;a1z3t000007qroDAAQ&quot;,
&quot;Milwaukee&quot;,&quot;a1z3t000006izrJAAQ&quot;, 
&quot;Racine&quot;,&quot;a1z3t000006izrIAAQ&quot;, 
&quot;Tulsa&quot;,&quot;a1z3t000006izrIAAQ&quot;, 
&quot;a1z3t000006izrJAAQ&quot;),

CASE(Product_Industry__c, 
&quot;Utility&quot;,&quot;a1z3t000006izrJAAQ&quot;, 
&quot;Industrial&quot;,&quot;a1z3t000006izrIAAQ&quot;, 
&quot;Wyco&quot;,&quot;a1z3t000006izrNAAQ&quot;, 
&quot;a1z3t000006izrJAAQ&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call RMA Email</label>
    <type>Text</type>
</CustomField>