mabger-meter/force-app/main/default/objects/Case/fields/Case_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Case_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>