mabger-meter/force-app/main/default/objects/Case/fields/Case_Closed_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send a closed case survey more than once.</description>
    <label>Case Closed Survey Sent</label>
    <type>Checkbox</type>
</CustomField>