mabger-meter/force-app/main/default/objects/Case/fields/Case_List_View_Sort__c.field-meta.xml
<CustomField>
    <fullName>Case_List_View_Sort__c</fullName>
    <formula>CASE( TEXT( Priority ), &quot;Rush&quot;, &quot;1&quot;, &quot;Normal&quot;, &quot;2&quot;, Null) &amp; &quot;-&quot; &amp; TEXT( Priority )&amp; &quot;-&quot;&amp; TEXT( YEAR( DATEVALUE( CreatedDate ) ) )  &amp;&quot;/&quot;&amp; TEXT( MONTH( DATEVALUE( CreatedDate ) ) ) &amp;&quot;/&quot;&amp; TEXT( DAY( DATEVALUE( CreatedDate ) ) )&amp;&quot;/&quot;&amp; TEXT( TIMEVALUE( CreatedDate ) )</formula>
    <label>Case List View Sort</label>
    <type>Text</type>
</CustomField>