mabger-meter/force-app/main/default/objects/Case/fields/Case_Owner_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Queue_Name__c</fullName>
    <formula>Owner:Queue.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Queue Name</label>
    <type>Text</type>
</CustomField>