mabger-meter/force-app/main/default/objects/Case/fields/Case_Owner_s_Division__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_s_Division__c</fullName>
    <description>Returns division of owner (on user record) or queue&apos;s &quot;Division&quot;: Flow, Utility, WYCO</description>
    <formula>IF(AND(Owned_by_Queue__c = False,ISNULL(Owner:User.Division)=False), Owner:User.Division,
     IF(CONTAINS(Case_Owner_Queue_Name__c ,&quot;Flow&quot;), &quot;Flow&quot;,
           IF(CONTAINS(Case_Owner_Queue_Name__c ,&quot;NVLAP&quot;), &quot;Flow&quot;,
           IF(CONTAINS(Case_Owner_Queue_Name__c , &quot;Utility&quot;),&quot;Utility&quot;,
           IF(CONTAINS(Case_Owner_Queue_Name__c ,&quot;WYCO&quot;), &quot;WYCO&quot;,
           IF(Owned_by_Queue__c = True, Case_Owner_Queue_Name__c,
               Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.FirstName
         )))))
   )</formula>
    <label>Case Owner&apos;s Division</label>
    <type>Text</type>
</CustomField>