mabger-meter/force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Information / Action Provided</fullName>
            </value>
            <value>
                <fullName>No Information Available</fullName>
            </value>
            <value>
                <fullName>Reassigned/Transferred</fullName>
            </value>
            <value>
                <fullName>Required documentation not provided</fullName>
            </value>
            <value>
                <fullName>Duplicate Child Case</fullName>
                <label>Duplicate Case</label>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Canceled by customer</fullName>
            </value>
            <value>
                <fullName>Canceled, no payment received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>