mabger-meter/force-app/main/default/objects/Case/fields/Case_to_BME_Export__c.field-meta.xml
<CustomField>
    <fullName>Case_to_BME_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case to BME Export</label>
    <type>Checkbox</type>
</CustomField>