mabger-meter/force-app/main/default/objects/Case/fields/Case_to_BME_Ind_Lube_Mag_Valve__c.field-meta.xml
<CustomField>
    <fullName>Case_to_BME_Ind_Lube_Mag_Valve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case to BME Ind/Lube/Mag/Valve</label>
    <type>Checkbox</type>
</CustomField>