mabger-meter/force-app/main/default/objects/Case/fields/CaseCustomerShippingLocation__c.field-meta.xml
<CustomField>
    <fullName>CaseCustomerShippingLocation__c</fullName>
    <formula>Account.Name+BR()+
&quot;Attn: &quot;+Contact.FirstName+&quot; &quot;+Contact.LastName+BR()+
Address__c+BR()+
City__c+&quot;, &quot;+ State_Province__c+BR()+
Zip_Postal_Code__c+BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseCustomerShippingLocation</label>
    <type>Text</type>
</CustomField>