mabger-meter/force-app/main/default/objects/Case/fields/Charge_Support_to_Gratuity__c.field-meta.xml
<CustomField>
    <fullName>Charge_Support_to_Gratuity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if charge-able support should be covered under gratuity.  Please attach email request to the case as documentation.</inlineHelpText>
    <label>Charge Support to Gratuity</label>
    <type>Checkbox</type>
</CustomField>