mabger-meter/force-app/main/default/objects/Case/fields/Child_Case_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Disposition__c</fullName>
    <description>used only in the QA, drive PB to close duplicate child case.</description>
    <inlineHelpText>What should be done when this case is set as a child case?</inlineHelpText>
    <label>Child Case Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent, retain child case with current status.</fullName>
                <default>true</default>
                <label>Independent, retain child case with current status.</label>
            </value>
            <value>
                <fullName>Duplicate, close child case.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>