mabger-meter/force-app/main/default/objects/Case/fields/Choose_Analysis_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Choose_Analysis_Sheet__c</fullName>
    <formula>CASE(Product_Industry__c, 
&quot;Utility&quot;,&quot;a2838000002YXjG&quot;, 
&quot;Industrial&quot;,&quot;a2838000002Ya0r&quot;, 
&quot;Wyco&quot;,&quot;a2838000002Ya0r&quot;, 
&quot;a2838000002Ya0r&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Choose Analysis Sheet</label>
    <type>Text</type>
</CustomField>