mabger-meter/force-app/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Ship To City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>