mabger-meter/force-app/main/default/objects/Case/fields/Company_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Customer_Number__c</fullName>
    <label>Company Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>