mabger-meter/force-app/main/default/objects/Case/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Customer</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Industrial OEM - Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>