mabger-meter/force-app/main/default/objects/Case/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under ICS review</fullName>
            </value>
            <value>
                <fullName>Under US Trade Compliance review</fullName>
            </value>
            <value>
                <fullName>Under Legal review</fullName>
            </value>
            <value>
                <fullName>Under Management review</fullName>
            </value>
            <value>
                <fullName>Awaiting US License Approval</fullName>
            </value>
            <value>
                <fullName>Export control – Dual use</fullName>
            </value>
            <value>
                <fullName>Under EU Trade Compliance review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>