mabger-meter/force-app/main/default/objects/Case/fields/Contact_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contact_Business_Unit__c</fullName>
    <formula>Contact.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Business Unit</label>
    <type>Text</type>
</CustomField>