mabger-meter/force-app/main/default/objects/Case/fields/Contact_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Phone__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Phone</label>
    <type>Text</type>
</CustomField>