mabger-meter/force-app/main/default/objects/Case/fields/Coverage_Note__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Note__c</fullName>
    <label>Coverage Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>