mabger-meter/force-app/main/default/objects/Case/fields/Coverage_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Request_Type__c</fullName>
    <label>Coverage Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sale</fullName>
            </value>
            <value>
                <fullName>RFP – Request for Proposal</fullName>
            </value>
            <value>
                <fullName>RFP – Request for Proposal with NDA</fullName>
            </value>
            <value>
                <fullName>Post-Sale</fullName>
            </value>
            <value>
                <fullName>Post Sale Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>