mabger-meter/force-app/main/default/objects/Case/fields/Created_By_User_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Hidden__c</fullName>
    <formula>CreatedBy.FirstName  &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By User Hidden</label>
    <type>Text</type>
</CustomField>