mabger-meter/force-app/main/default/objects/Case/fields/Created_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is filled in when using the New Case button from an opportunity</description>
    <inlineHelpText>Opportunity from which the case was created.</inlineHelpText>
    <label>Created From Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>