mabger-meter/force-app/main/default/objects/Case/fields/Created_Prior_to_2PM__c.field-meta.xml
<CustomField>
    <fullName>Created_Prior_to_2PM__c</fullName>
    <description>If the case opened date/time (created date) is before 2pm, then check the box</description>
    <formula>IF(HOUR(TIMEVALUE(CreatedDate))-5&lt;14,TRUE,FALSE)</formula>
    <label>Created Prior to 2PM</label>
    <type>Checkbox</type>
</CustomField>