mabger-meter/force-app/main/default/objects/Case/fields/Credit_Memo_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Number__c</fullName>
    <label>Credit Memo Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>