mabger-meter/force-app/main/default/objects/Case/fields/Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value__c</fullName>
    <description>Users will enter a predetermined value of products that are being returned under warranty.</description>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>