mabger-meter/force-app/main/default/objects/Case/fields/Customer_Number_Conga__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_Conga__c</fullName>
    <formula>Account.Customer_Number__c</formula>
    <label>Customer Number - Conga</label>
    <type>Text</type>
</CustomField>