mabger-meter/force-app/main/default/objects/Case/fields/Customer_plant_shutdown__c.field-meta.xml
<CustomField>
    <fullName>Customer_plant_shutdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer plant shutdown</label>
    <type>Checkbox</type>
</CustomField>