mabger-meter/force-app/main/default/objects/Case/fields/Customer_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Region__c</fullName>
    <formula>CASE(TEXT(Account.Sales_Territory__c),
&quot;Central&quot;, &quot;Central&quot;,
&quot;Midwest&quot;, &quot;Midwest&quot;,
&quot;Northeast&quot;, &quot;Northeast&quot;,
&quot;South&quot;, &quot;South&quot;,
&quot;Southeast&quot;, &quot;Southeast&quot;,
&quot;West&quot;, &quot;West&quot;,
&quot;East&quot;, &quot;East&quot;,
&quot;Canada&quot;, &quot;Canada&quot;,
&quot;Latin America&quot;, &quot;Latin America&quot;,
&quot;Mexico&quot;, &quot;Mexico&quot;,
&quot;Rest of World&quot;, &quot;Rest of World&quot;, &quot;None&quot;)</formula>
    <label>Customer Region</label>
    <type>Text</type>
</CustomField>