mabger-meter/force-app/main/default/objects/Case/fields/Customer_s_Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Shipping_Location__c</fullName>
    <formula>Customer_Shipping_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer&apos;s Shipping Location</label>
    <type>Text</type>
</CustomField>