mabger-meter/force-app/main/default/objects/Case/fields/Data_Submit_Age__c.field-meta.xml
<CustomField>
    <fullName>Data_Submit_Age__c</fullName>
    <formula>TODAY() - Data_Submit_Date__c</formula>
    <label>Data Submit Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>