mabger-meter/force-app/main/default/objects/Case/fields/Data_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Submit_Date__c</fullName>
    <label>Data Submit Date</label>
    <type>Date</type>
</CustomField>