mabger-meter/force-app/main/default/objects/Case/fields/Date_Case_to_BME_Export__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_to_BME_Export__c</fullName>
    <label>Date - Case to BME Export</label>
    <type>DateTime</type>
</CustomField>