mabger-meter/force-app/main/default/objects/Case/fields/Date_Case_to_BME_Ind_Lube_Mag_Valve__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_to_BME_Ind_Lube_Mag_Valve__c</fullName>
    <label>Date - Case to BME Ind/Lube/Mag/Valve</label>
    <type>DateTime</type>
</CustomField>